Fix up widget breaking under certain conditions
* Current implementation of artist rendered the widget non-functional if
no artist was returned by Tuna. The loop was throwing errors because the
array was undefined in this case. Assign empty array so we can loop over
that instead.
* Remove trailing "by" when no artist was defined
* Cover-URL would get replaced by "undefined?randomnumber" if no cover
  was in the data, resulting in a broken widget layout since `<img>` has
no inherent or defined width/height. Insert default placeholder
instead.

--- a/data/widget.html
+++ b/data/widget.html
@@ -148,7 +148,7 @@
 
                 // artist list
                 var artists = '';
-                var array = data['artists'];
+                var array = data['artists'] || []; // in some cases no artist is known/submitted
                 for (var i = 0; i < array.length; i++) {
                     artists += array[i];
                     if (i < array.length - 1)
@@ -156,7 +156,10 @@
                 }
 
                 document.getElementById('title').innerText = data['title'];
-                if (data['cover_url'] !== last_cover || // Refresh only if meta data suggests that the cover changed
+                if (data['cover_url'] == undefined ||
+                    data['cover_url'] == '') {
+                    document.getElementById('cover').src = "placeholder.png";
+                } else if (data['cover_url'] !== last_cover || // Refresh only if meta data suggests that the cover changed
                     (data['title'] !== last_title &&    // When using MPD the path is always the cover path configured in tuna
                     artists !== last_artist))           // which means it won't change so we check against other data
                 {
@@ -165,10 +168,12 @@
                     last_cover = data['cover_url'];
                 }
 
-                if (artists === data['album'] || data['album'] === undefined) // Some singles have the artist as the album, which looks strange with the other subtitle
-                    document.getElementById('artist').innerText = 'by ' + artists;
+                if (artists == '')
+                    document.getElementById('artist').innerHTML = '&nbsp;'; // space is considered empty element, &nbsp; is not
+                else if (artists === data['album'] || data['album'] === undefined) // Some singles have the artist as the album, which looks strange with the other subtitle
+                    document.getElementById('artist').innerHTML = 'by ' + artists;
                 else
-                    document.getElementById('artist').innerText = 'by ' + artists + ' from ' + data['album']
+                    document.getElementById('artist').innerHTML = 'by ' + artists + ' on ' + data['album']
 
                 var length = data['duration'];
                 var progress = data['progress'];
