--- a/data/widget.html
+++ b/data/widget.html
@@ -173,12 +173,12 @@
                 if (artists != last_artist) {
                     var artistLine = '';
                     if (artists != '')
-                        artistsLine += "<i>by</i> " + artists + " ";
+                        artistLine += "<i>by</i> " + artists + " ";
 
                     // sometimes there is an album with no artist, we can still allow that
                     if (data['album'] != undefined &&
                         data['album'] != artists) // Some singles have the artist as the album, which looks strange with the other subtitle
-                        artistsLine += "<i>on</i> " + data['album'];
+                        artistLine += "<i>on</i> " + data['album'];
 
                     // use &nbsp; in case we have neither artist nor album
                     // space is considered empty element, &nbsp; is not
