--- a/data/widget.html
+++ b/data/widget.html
@@ -123,7 +123,7 @@
 
         function format_ms(s) {
             var ms = s % 1000;
-            s = (s - ms) / 1000;
+            s = Math.floor((s - ms) / 1000);
             var secs = s % 60;
             s = (s - secs) / 60;
             var mins = s % 60;
@@ -202,6 +202,6 @@
             });
         }
 
-        setInterval(fetch_data, 500);
+        setInterval(fetch_data, 200);
     </script>
 </html>
