--- a/data/widget.html
+++ b/data/widget.html
@@ -29,7 +29,7 @@
         transition: background-image 0.8s ease-in-out;
         aspect-ratio: 1;
         background-size: contain;
-        border-radius: 4px;
+        border-radius: 50%;
         box-shadow: 0 0 4px 4px rgba(0, 0, 0, .5) inset;
     }
 
