Widget: Do not repeat cover and center it

--- a/data/widget.html
+++ b/data/widget.html
@@ -28,9 +28,11 @@
         height: 100%;
         transition: background-image 0.8s ease-in-out;
         aspect-ratio: 1;
-        background-size: contain;
+        background-size: cover;
         border-radius: 4px;
         box-shadow: 0 0 4px 4px rgba(0, 0, 0, .5) inset;
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
     .image-box {
